force-app/main/default/objects/LoanApplicationFinancial/LoanApplicationFinancial.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>