force-app/main/default/objects/LoanApplicationFinancial/fields/Borrow_Additional_Funds__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Additional_Funds__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Loan</complianceGroup>
    <description>Indicator whether customer has requested to borrow additional funds</description>
    <label>Borrow Additional Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>