force-app/main/default/objects/LoanApplicationFinancial/fields/Current_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Loan</complianceGroup>
    <description>Fund allocation for Refinance purpose</description>
    <label>Current Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>