force-app/main/default/objects/LoanApplicationFinancial/fields/E_Tag__c.field-meta.xml
<CustomField>
    <fullName>E_Tag__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>This checksum is computed by the server based on the value of other fields, and may be sent on update requests to ensure the client has an up-to-date value before proceeding.</description>
    <label>E Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>