force-app/main/default/objects/LoanApplicationFinancial/fields/Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Fixed or variable interest rate</description>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTEREST_RATE_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>INTEREST_RATE_TYPE_FIX</fullName>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>INTEREST_RATE_TYPE_VAR</fullName>
                <label>Variable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>