force-app/main/default/objects/LoanApplicationFinancial/fields/Loan_Margin__c.field-meta.xml
<CustomField>
    <fullName>Loan_Margin__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Margin rate to apply in basis points. e.g. 0.5% is 50 basis points.</description>
    <label>Loan Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>