force-app/main/default/objects/LoanApplicationFinancial/fields/Loan_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Frequency__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Frequency of loan repayments</description>
    <label>Loan Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REPAYMENT_FREQUENCY_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_WEEKLY</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_FORTNIGHTLY</fullName>
                <label>Fortnightly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_MONTHLY</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_QUARTERLY</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_BI_ANNUAL</fullName>
                <label>Bi-Annually</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_ANNUAL</fullName>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>