force-app/main/default/objects/LoanApplicationFinancial/fields/Loan_Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Principal &amp; Interest or Interest only</description>
    <label>Loan Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REPAYMENT_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>REPAYMENT_TYPE_PRINCIPAL_INTEREST</fullName>
                <label>Principal and Interest</label>
            </value>
            <value>
                <fullName>REPAYMENT_TYPE_INTEREST_ONLY</fullName>
                <label>Interest Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>