force-app/main/default/objects/LoanApplicationFinancial/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Formula to display loan term in years and months format</description>
    <formula>TEXT(FLOOR( Loan_Term_in_Months__c /12)) &amp; &apos; Years&apos; &amp; &apos; &apos; &amp;
IF(FLOOR(MOD(Loan_Term_in_Months__c,12)) = 0, &apos;&apos;, TEXT(FLOOR(MOD(Loan_Term_in_Months__c,12))) &amp; IF(FLOOR(MOD(Loan_Term_in_Months__c,12)) = 1, &apos; Month &apos;, &apos; Months &apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Term</label>
    <type>Text</type>
</CustomField>