force-app/main/default/objects/LoanApplicationFinancial/fields/Loan_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_in_Months__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Loan term in months</description>
    <label>Loan Term in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>