force-app/main/default/objects/LoanApplicationFinancial/fields/Percentage_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Deductible__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Field stores the percentage value</description>
    <label>Percentage Deductible</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>