force-app/main/default/objects/LoanApplicationFinancial/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The product marketing code and name customer has applied for</description>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HFC</fullName>
                <label>ANZ Fixed Home Loan</label>
            </value>
            <value>
                <fullName>IFC</fullName>
                <label>ANZ Fixed Residential Investment Loan</label>
            </value>
            <value>
                <fullName>HLVAR01</fullName>
                <label>ANZx Home Loans Variable</label>
            </value>
            <value>
                <fullName>IAC</fullName>
                <label>ANZ Interest-in-Advance Residential Investment Loan</label>
            </value>
            <value>
                <fullName>BVC</fullName>
                <label>ANZ Simplicity Plus Home Loan</label>
            </value>
            <value>
                <fullName>BIC</fullName>
                <label>ANZ Simplicity Plus Residential Investment Loan</label>
            </value>
            <value>
                <fullName>HVC</fullName>
                <label>ANZ Standard Variable Home Loan</label>
            </value>
            <value>
                <fullName>IRC</fullName>
                <label>ANZ Standard Variable Residential Investment Land Loan</label>
            </value>
            <value>
                <fullName>IVC</fullName>
                <label>ANZ Standard Variable Residential Investment Loan</label>
            </value>
            <value>
                <fullName>HRC</fullName>
                <label>ANZ Standard Variable Residential Land Loan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>