force-app/main/default/objects/LoanApplicationFinancial/fields/Property_Valuation_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Reference to the collateral assessment for this loan</description>
    <label>Property Valuation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>